--- a/session6/complete/session6.ipynb
+++ b/session6/complete/session6.ipynb
@@ -3,6 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "be2bf1b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,6 +17,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8e9e8201",
    "metadata": {},
    "source": [
     "### Exercise 1\n",
@@ -29,6 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "eec11cad",
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +40,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.002s\n",
+      "Ran 1 test in 0.011s\n",
       "\n",
       "OK\n"
      ]
@@ -52,6 +55,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "30d1385a",
    "metadata": {},
    "source": [
     "### Exercise 2\n",
@@ -65,6 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "20f66379",
    "metadata": {},
    "outputs": [
     {
@@ -91,6 +96,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6c7caba7",
    "metadata": {},
    "source": [
     "### Exercise 3\n",
@@ -104,6 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "e4911990",
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +119,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.002s\n",
+      "Ran 1 test in 0.009s\n",
       "\n",
       "OK\n"
      ]
@@ -127,6 +134,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6bd57310",
    "metadata": {},
    "source": [
     "### Exercise 4\n",
@@ -143,6 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "5d703e00",
    "metadata": {},
    "outputs": [
     {
@@ -169,6 +178,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "52ef1dc3",
    "metadata": {},
    "source": [
     "### Exercise 5\n",
@@ -181,6 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "2a9f0be4",
    "metadata": {},
    "outputs": [
     {
@@ -206,6 +217,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f4be18ef",
    "metadata": {},
    "source": [
     "### Exercise 6\n",
@@ -219,6 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "befa2dbb",
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +240,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
+      "Ran 1 test in 0.003s\n",
       "\n",
       "OK\n"
      ]
@@ -242,6 +255,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "93d5b948",
    "metadata": {},
    "source": [
     "### Exercise 7\n",
@@ -255,6 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "fadb2d03",
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +278,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
+      "Ran 1 test in 0.005s\n",
       "\n",
       "OK\n"
      ]
@@ -278,6 +293,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "536afe9f",
    "metadata": {},
    "source": [
     "### Exercise 8\n",
@@ -291,6 +307,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "354f726f",
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +316,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
+      "Ran 1 test in 0.004s\n",
       "\n",
       "OK\n"
      ]
@@ -315,6 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "e26e2294",
    "metadata": {},
    "outputs": [
     {
@@ -347,6 +365,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f1171b93",
    "metadata": {},
    "source": [
     "### Exercise 9\n",
@@ -360,6 +379,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
+   "id": "5a3e0384",
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +388,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
+      "Ran 1 test in 0.003s\n",
       "\n",
       "OK\n"
      ]
@@ -383,6 +403,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8124b6c5",
    "metadata": {},
    "source": [
     "### Exercise 10\n",
@@ -396,6 +417,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
+   "id": "cb752153",
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +426,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
+      "Ran 1 test in 0.004s\n",
       "\n",
       "OK\n"
      ]
@@ -419,6 +441,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9156b7c0",
    "metadata": {},
    "source": [
     "### Exercise 11\n",
@@ -432,6 +455,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
+   "id": "6295b8cb",
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +464,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
+      "Ran 1 test in 0.003s\n",
       "\n",
       "OK\n"
      ]
@@ -455,6 +479,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5ab10ee1",
    "metadata": {},
    "source": [
     "### Exercise 12\n",
@@ -468,6 +493,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
+   "id": "318052aa",
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +502,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
+      "Ran 1 test in 0.003s\n",
       "\n",
       "OK\n"
      ]
@@ -491,6 +517,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b362558a",
    "metadata": {},
    "source": [
     "### Exercise 13\n",
@@ -504,6 +531,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
+   "id": "b4da7414",
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +540,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.002s\n",
+      "Ran 1 test in 0.003s\n",
       "\n",
       "OK\n"
      ]
@@ -528,6 +556,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
+   "id": "67eb5760",
    "metadata": {},
    "outputs": [
     {
@@ -551,6 +580,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
+   "id": "f3b72ada",
    "metadata": {},
    "outputs": [
     {
@@ -575,6 +605,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8e222a4e",
    "metadata": {},
    "source": [
     "### Exercise 14\n",
@@ -599,6 +630,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
+   "id": "80e92fa0",
    "metadata": {},
    "outputs": [
     {
@@ -633,6 +665,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c73ba747",
    "metadata": {},
    "source": [
     "### Exercise 15\n",
@@ -646,6 +679,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
+   "id": "6d43e2eb",
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +688,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
+      "Ran 1 test in 0.003s\n",
       "\n",
       "OK\n"
      ]
@@ -669,6 +703,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b2e409b7",
    "metadata": {},
    "source": [
     "### Exercise 16\n",
@@ -683,6 +718,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
+   "id": "5755ea79",
    "metadata": {},
    "outputs": [
     {
@@ -717,6 +753,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "31aa6539",
    "metadata": {},
    "source": [
     "### Exercise 17\n",
@@ -730,6 +767,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
+   "id": "f39762ae",
    "metadata": {},
    "outputs": [
     {
@@ -738,7 +776,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
+      "Ran 1 test in 0.006s\n",
       "\n",
       "OK\n"
      ]
@@ -753,32 +791,30 @@
   },
   {
    "cell_type": "markdown",
+   "id": "da92a262",
    "metadata": {},
    "source": [
     "### Exercise 18\n",
     "\n",
     "Calculate the new bits given the first and last blocks of this 2,016-block difficulty adjustment period:\n",
     "\n",
-    "* Block 471744:\n",
-    "+\n",
+    "Block 471744:\n",
+    "\n",
     "```\n",
-    "000000203471101bbda3fe307664b3283a9ef0e97d9a38a7eacd88000000000000000000\n",
-    "10c8aba8479bbaa5e0848152fd3c2289ca50e1c3e58c9a4faaafbdf5803c5448ddb84559\n",
-    "7e8b0118e43a81d3\n",
+    "000000203471101bbda3fe307664b3283a9ef0e97d9a38a7eacd8800000000000000000010c8aba8479bbaa5e0848152fd3c2289ca50e1c3e58c9a4faaafbdf5803c5448ddb845597e8b0118e43a81d3\n",
     "```\n",
     "\n",
-    "* Block 473759:\n",
-    "+\n",
+    "Block 473759:\n",
+    "\n",
     "```\n",
-    "02000020f1472d9db4b563c35f97c428ac903f23b7fc055d1cfc26000000000000000000\n",
-    "b3f449fcbe1bc4cfbcb8283a0d2c037f961a3fdf2b8bedc144973735eea707e126425859\n",
-    "7e8b0118e5f00474\n",
+    "02000020f1472d9db4b563c35f97c428ac903f23b7fc055d1cfc26000000000000000000b3f449fcbe1bc4cfbcb8283a0d2c037f961a3fdf2b8bedc144973735eea707e1264258597e8b0118e5f00474\n",
     "```\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 22,
+   "id": "af0ba20e",
    "metadata": {},
    "outputs": [
     {
@@ -793,7 +829,7 @@
     "# Exercise 18\n",
     "\n",
     "from io import BytesIO\n",
-    "from block import Block, TWO_WEEKS\n",
+    "from block import Block, TWO_WEEKS, MAX_TARGET\n",
     "from helper import target_to_bits\n",
     "block1_hex = '000000203471101bbda3fe307664b3283a9ef0e97d9a38a7eacd8800000000000000000010c8aba8479bbaa5e0848152fd3c2289ca50e1c3e58c9a4faaafbdf5803c5448ddb845597e8b0118e43a81d3'\n",
     "block2_hex = '02000020f1472d9db4b563c35f97c428ac903f23b7fc055d1cfc26000000000000000000b3f449fcbe1bc4cfbcb8283a0d2c037f961a3fdf2b8bedc144973735eea707e1264258597e8b0118e5f00474'\n",
@@ -809,6 +845,9 @@
     "    time_differential = TWO_WEEKS // 4\n",
     "# formula for new target is target * time differential // TWO_WEEKS\n",
     "new_target = last_block.target() * time_differential // TWO_WEEKS\n",
+    "# if the new target is bigger than MAX_TARGET, set to MAX_TARGET\n",
+    "if new_target > MAX_TARGET:\n",
+    "    new_target = MAX_TARGET\n",
     "# convert the target to bits\n",
     "new_bits = target_to_bits(new_target)\n",
     "# print the new bits in hex\n",
@@ -817,6 +856,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "51f14eae",
    "metadata": {},
    "source": [
     "### Exercise 19\n",
@@ -830,6 +870,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
+   "id": "6d2702b9",
    "metadata": {},
    "outputs": [
     {
@@ -838,7 +879,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
+      "Ran 1 test in 0.003s\n",
       "\n",
       "OK\n"
      ]
@@ -872,5 +913,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 5
 }
