--- a/session6/session6.ipynb
+++ b/session6/session6.ipynb
@@ -3,6 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "be2bf1b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,6 +17,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8e9e8201",
    "metadata": {},
    "source": [
     "### Exercise 1\n",
@@ -29,6 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "eec11cad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,6 +43,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "30d1385a",
    "metadata": {},
    "source": [
     "### Exercise 2\n",
@@ -53,6 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1cbf9eca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,6 +75,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6c7caba7",
    "metadata": {},
    "source": [
     "### Exercise 3\n",
@@ -83,6 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e4911990",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,6 +101,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6bd57310",
    "metadata": {},
    "source": [
     "### Exercise 4\n",
@@ -110,6 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "da1e2068",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,6 +136,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "52ef1dc3",
    "metadata": {},
    "source": [
     "### Exercise 5\n",
@@ -139,6 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "2c9a7e84",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,6 +166,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f4be18ef",
    "metadata": {},
    "source": [
     "### Exercise 6\n",
@@ -168,6 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "befa2dbb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,6 +192,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "93d5b948",
    "metadata": {},
    "source": [
     "### Exercise 7\n",
@@ -192,6 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "fadb2d03",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,6 +218,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "536afe9f",
    "metadata": {},
    "source": [
     "### Exercise 8\n",
@@ -216,6 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "354f726f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,6 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e26e2294",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,6 +266,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f1171b93",
    "metadata": {},
    "source": [
     "### Exercise 9\n",
@@ -261,6 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "5a3e0384",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,6 +292,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8124b6c5",
    "metadata": {},
    "source": [
     "### Exercise 10\n",
@@ -285,6 +306,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "cb752153",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,6 +318,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9156b7c0",
    "metadata": {},
    "source": [
     "### Exercise 11\n",
@@ -309,6 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6295b8cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,6 +344,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5ab10ee1",
    "metadata": {},
    "source": [
     "### Exercise 12\n",
@@ -333,6 +358,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "318052aa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,6 +370,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b362558a",
    "metadata": {},
    "source": [
     "### Exercise 13\n",
@@ -357,6 +384,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b4da7414",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,6 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "67eb5760",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,6 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f3b72ada",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,6 +430,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8e222a4e",
    "metadata": {},
    "source": [
     "### Exercise 14\n",
@@ -424,6 +455,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ad0f1bd2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,6 +480,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c73ba747",
    "metadata": {},
    "source": [
     "### Exercise 15\n",
@@ -461,6 +494,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6d43e2eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,6 +506,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b2e409b7",
    "metadata": {},
    "source": [
     "### Exercise 16\n",
@@ -486,6 +521,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "687186d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,6 +547,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "31aa6539",
    "metadata": {},
    "source": [
     "### Exercise 17\n",
@@ -524,6 +561,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f39762ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -535,39 +573,37 @@
   },
   {
    "cell_type": "markdown",
+   "id": "da92a262",
    "metadata": {},
    "source": [
     "### Exercise 18\n",
     "\n",
     "Calculate the new bits given the first and last blocks of this 2,016-block difficulty adjustment period:\n",
     "\n",
-    "* Block 471744:\n",
-    "+\n",
+    "Block 471744:\n",
+    "\n",
     "```\n",
-    "000000203471101bbda3fe307664b3283a9ef0e97d9a38a7eacd88000000000000000000\n",
-    "10c8aba8479bbaa5e0848152fd3c2289ca50e1c3e58c9a4faaafbdf5803c5448ddb84559\n",
-    "7e8b0118e43a81d3\n",
+    "000000203471101bbda3fe307664b3283a9ef0e97d9a38a7eacd8800000000000000000010c8aba8479bbaa5e0848152fd3c2289ca50e1c3e58c9a4faaafbdf5803c5448ddb845597e8b0118e43a81d3\n",
     "```\n",
     "\n",
-    "* Block 473759:\n",
-    "+\n",
+    "Block 473759:\n",
+    "\n",
     "```\n",
-    "02000020f1472d9db4b563c35f97c428ac903f23b7fc055d1cfc26000000000000000000\n",
-    "b3f449fcbe1bc4cfbcb8283a0d2c037f961a3fdf2b8bedc144973735eea707e126425859\n",
-    "7e8b0118e5f00474\n",
+    "02000020f1472d9db4b563c35f97c428ac903f23b7fc055d1cfc26000000000000000000b3f449fcbe1bc4cfbcb8283a0d2c037f961a3fdf2b8bedc144973735eea707e1264258597e8b0118e5f00474\n",
     "```\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "16efb51c",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Exercise 18\n",
     "\n",
     "from io import BytesIO\n",
-    "from block import Block, TWO_WEEKS\n",
+    "from block import Block, TWO_WEEKS, MAX_TARGET\n",
     "from helper import target_to_bits\n",
     "block1_hex = '000000203471101bbda3fe307664b3283a9ef0e97d9a38a7eacd8800000000000000000010c8aba8479bbaa5e0848152fd3c2289ca50e1c3e58c9a4faaafbdf5803c5448ddb845597e8b0118e43a81d3'\n",
     "block2_hex = '02000020f1472d9db4b563c35f97c428ac903f23b7fc055d1cfc26000000000000000000b3f449fcbe1bc4cfbcb8283a0d2c037f961a3fdf2b8bedc144973735eea707e1264258597e8b0118e5f00474'\n",
@@ -583,6 +619,9 @@
     "\n",
     "# formula for new target is target * time differential // TWO_WEEKS\n",
     "\n",
+    "# if the new target is bigger than MAX_TARGET, set to MAX_TARGET\n",
+    "\n",
+    "\n",
     "# convert the target to bits\n",
     "new_bits = target_to_bits(new_target)\n",
     "# print the new bits in hex\n",
@@ -591,6 +630,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "51f14eae",
    "metadata": {},
    "source": [
     "### Exercise 19\n",
@@ -604,6 +644,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6d2702b9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -616,5 +657,5 @@
  ],
  "metadata": {},
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 5
 }
