--- a/session7/complete/session7.ipynb
+++ b/session7/complete/session7.ipynb
@@ -80,7 +80,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
+      "Ran 1 test in 0.005s\n",
       "\n",
       "OK\n"
      ]
@@ -116,7 +116,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
+      "Ran 1 test in 0.004s\n",
       "\n",
       "OK\n"
      ]
@@ -152,7 +152,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.000s\n",
+      "Ran 1 test in 0.002s\n",
       "\n",
       "OK\n"
      ]
@@ -188,7 +188,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
+      "Ran 1 test in 0.006s\n",
       "\n",
       "OK\n"
      ]
@@ -246,7 +246,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.273s\n",
+      "Ran 1 test in 0.238s\n",
       "\n",
       "OK\n"
      ]
@@ -292,7 +292,7 @@
    ],
    "source": [
     "# Block Header Download Example\n",
-    "from block import GENESIS_BLOCK, MAX_TARGET\n",
+    "from block import GENESIS_BLOCK\n",
     "from helper import target_to_bits\n",
     "from network import GetHeadersMessage, HeadersMessage, SimpleNode\n",
     "node = SimpleNode('seed.btc.petertodd.org', testnet=False)\n",
@@ -494,7 +494,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
+      "Ran 1 test in 0.003s\n",
       "\n",
       "OK\n"
      ]
@@ -623,7 +623,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
+      "Ran 1 test in 0.003s\n",
       "\n",
       "OK\n"
      ]
@@ -758,7 +758,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
+      "Ran 1 test in 0.003s\n",
       "\n",
       "OK\n"
      ]
@@ -889,7 +889,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
+      "Ran 1 test in 0.004s\n",
       "\n",
       "OK\n"
      ]
