--- a/session7/session7.ipynb
+++ b/session7/session7.ipynb
@@ -189,7 +189,7 @@
    "outputs": [],
    "source": [
     "# Block Header Download Example\n",
-    "from block import GENESIS_BLOCK, MAX_TARGET\n",
+    "from block import GENESIS_BLOCK\n",
     "from helper import target_to_bits\n",
     "from network import GetHeadersMessage, HeadersMessage, SimpleNode\n",
     "node = SimpleNode('seed.btc.petertodd.org', testnet=False)\n",
@@ -698,25 +698,7 @@
    ]
   }
  ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.5"
-  }
- },
+ "metadata": {},
  "nbformat": 4,
  "nbformat_minor": 4
 }
