--- a/session6/session6.ipynb
+++ b/session6/session6.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be2bf1b1",
+   "id": "900673f4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e9e8201",
+   "id": "7d794dde",
    "metadata": {},
    "source": [
     "### Exercise 1\n",
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eec11cad",
+   "id": "15bce08d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30d1385a",
+   "id": "7d690f1e",
    "metadata": {},
    "source": [
     "### Exercise 2\n",
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1cbf9eca",
+   "id": "39795087",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c7caba7",
+   "id": "fac19f76",
    "metadata": {},
    "source": [
     "### Exercise 3\n",
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e4911990",
+   "id": "a506bde9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6bd57310",
+   "id": "2c2add97",
    "metadata": {},
    "source": [
     "### Exercise 4\n",
@@ -118,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da1e2068",
+   "id": "9f63bc06",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52ef1dc3",
+   "id": "6c1c19d5",
    "metadata": {},
    "source": [
     "### Exercise 5\n",
@@ -149,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c9a7e84",
+   "id": "a01c2301",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4be18ef",
+   "id": "2d6ea03f",
    "metadata": {},
    "source": [
     "### Exercise 6\n",
@@ -180,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "befa2dbb",
+   "id": "7dcd3afd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93d5b948",
+   "id": "efecca9d",
    "metadata": {},
    "source": [
     "### Exercise 7\n",
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fadb2d03",
+   "id": "300607db",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "536afe9f",
+   "id": "a12de840",
    "metadata": {},
    "source": [
     "### Exercise 8\n",
@@ -232,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "354f726f",
+   "id": "b0938320",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e26e2294",
+   "id": "edb52c05",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1171b93",
+   "id": "8955f877",
    "metadata": {},
    "source": [
     "### Exercise 9\n",
@@ -280,7 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a3e0384",
+   "id": "217fe6b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8124b6c5",
+   "id": "95d8080f",
    "metadata": {},
    "source": [
     "### Exercise 10\n",
@@ -306,7 +306,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb752153",
+   "id": "48263e02",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9156b7c0",
+   "id": "df14d2f2",
    "metadata": {},
    "source": [
     "### Exercise 11\n",
@@ -332,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6295b8cb",
+   "id": "90146ade",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ab10ee1",
+   "id": "282a88c1",
    "metadata": {},
    "source": [
     "### Exercise 12\n",
@@ -358,7 +358,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "318052aa",
+   "id": "1135204f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b362558a",
+   "id": "60f0fbe6",
    "metadata": {},
    "source": [
     "### Exercise 13\n",
@@ -384,7 +384,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4da7414",
+   "id": "8284231d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67eb5760",
+   "id": "2f1e94db",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3b72ada",
+   "id": "97be4eca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e222a4e",
+   "id": "509b1ed4",
    "metadata": {},
    "source": [
     "### Exercise 14\n",
@@ -455,7 +455,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad0f1bd2",
+   "id": "5fcbc991",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c73ba747",
+   "id": "68f9955b",
    "metadata": {},
    "source": [
     "### Exercise 15\n",
@@ -494,7 +494,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d43e2eb",
+   "id": "6a0b11dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2e409b7",
+   "id": "e562195d",
    "metadata": {},
    "source": [
     "### Exercise 16\n",
@@ -521,7 +521,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "687186d0",
+   "id": "083942d7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31aa6539",
+   "id": "d61d87f8",
    "metadata": {},
    "source": [
     "### Exercise 17\n",
@@ -561,7 +561,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f39762ae",
+   "id": "e2f46b1a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -573,7 +573,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da92a262",
+   "id": "c4d79738",
    "metadata": {},
    "source": [
     "### Exercise 18\n",
@@ -596,7 +596,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16efb51c",
+   "id": "ea06cb51",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -623,14 +623,13 @@
     "\n",
     "\n",
     "# convert the target to bits\n",
-    "new_bits = target_to_bits(new_target)\n",
-    "# print the new bits in hex\n",
-    "print(new_bits.hex())"
+    "\n",
+    "# print the new bits in hex\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "51f14eae",
+   "id": "51ee7ff4",
    "metadata": {},
    "source": [
     "### Exercise 19\n",
@@ -644,7 +643,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d2702b9",
+   "id": "acd08755",
    "metadata": {},
    "outputs": [],
    "source": [
